# thbraet.github.io

./: .gitmodules  Gemfile  README.md  _config.yml  aboutme.md  deployment_pipelines.md  pyproject.toml  resume.md  test_rosalind.md
_data/: resume.yml
_layouts/: minimal.html
engineering/: fluvius dataflow.drawio  productivity.md
engineering/bioinformatics/: bioinformatics_hogent
engineering/ci-cd/: data-to-bdv.md  home.md
engineering/data-modelling/: home.md
engineering/data-visualisation/: home.md
engineering/fluvius/: datacontract.md  to_ods.md
engineering/fluvius/bdv/: Template.html  Template.ipynb  Template.py  release.md
engineering/fluvius/ods/: overview.md
jupyter_templates/: notebook_template.tpl
nutrition/: MIND.md  glycemic_index.md  sports_nutrition.md
sports/: race_calendar.md
