[tool.poetry]
name = "thbraet-github-io"
version = "0.1.0"
description = ""
authors = ["Thibauld Braet <thibauld@live.be>"]
readme = "README.md"
packages = [{include = "thbraet"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
